--- a/db-mongo-cluster.yml
+++ b/db-mongo-cluster.yml
@@ -1,30 +1,29 @@
-version: "3.8"
+version: "3.9"
 
 services:
   mongodb:
-    image: 'bitnami/mongodb:latest'
-    container_name: mongodb
+    image: "bitnami/mongodb:latest"
+    container_name: "mongodb"
     ports:
       - "27017:27017"
     environment:
+      - MONGODB_ROOT_USER=root
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
-      - 'data:/bitnami/mongodb'
+      - "data:/bitnami/mongodb"
 
   mongodb-express:
-    image: 'mongo-express'
-    restart: always
-    container_name: mongodb-express
+    image: "mongo-express"
+    container_name: "mongodb-express"
     ports:
-      - '8081:8081'
+      - "8081:8081"
     environment:
       - ME_CONFIG_MONGODB_URL=mongodb://mongodb:27017
     depends_on:
       - mongodb
 
 volumes:
-  data:
-    driver: local
+  data: {}
 
 networks:
   default:
